layout issue fix

--- a/portfolio_main/static/css/layout_styles.css
+++ b/portfolio_main/static/css/layout_styles.css
@@ -6176,7 +6176,7 @@ button.bg-dark:focus {
 }
 
 .bg-white {
-  background-color: #8fd19e !important;
+  background-color: #fff !important;
 }
 
 .bg-transparent {
